# BEIT

./: .gitignore  README.md
BE/CL10/AS2/: settings.gradle
BE/CL10/AS4_Android_Animation/: settings.gradle
BE/CL10/IOT Simulations/: Motor operations.brd  RGB LED Control with Photoresistor.brd  RGB LED Control with Photoresistor.ino  Scrolling  Display.brd  Scrolling_Display.ino  motor_operations1.ino
BE/CL7/: CRT.cpp  RSA.cpp  RSA.java  ShaEncryption.java
BE/CL9/AS1/: Client.java  Server.java
BE/CL9/AS2/: Assignment2.java  InputFile.java  Mpi_Advance.java  Mpi_Basic.java  Readme.md
BE/CL9/AS2/mpj/src/mpjdev/natmpjdev/lib/: CMakeLists.txt  mpjdev_natmpjdev_Comm.c  mpjdev_natmpjdev_Comm.h  mpjdev_natmpjdev_Group.c  mpjdev_natmpjdev_Group.h  mpjdev_natmpjdev_Intercomm.c  mpjdev_natmpjdev_Intercomm.h  mpjdev_natmpjdev_Intracomm.c  mpjdev_natmpjdev_Intracomm.h  mpjdev_natmpjdev_NativeRecvRequest.c  mpjdev_natmpjdev_NativeRecvRequest.h  mpjdev_natmpjdev_NativeSendRequest.c  mpjdev_natmpjdev_NativeSendRequest.h  mpjdev_natmpjdev_shared.h
BE/CL9/AS3/: Readme.md  TTTClient.java  TTTImpl.java  TTTModule.idl  TTTServer.java
BE/CL9/AS4/: Bully.java  Ring.java
BE/CL9/AS6/: Publisher.java  Readme.md  Subscriber.java
BE/IWPL/AS1/: index.html  profiles.html  register.html  style.css  validator.js
BE/IWPL/AS2/: addExperience.html  categories.html  experience.html  index.html  interview_tips.html  (+4 more)
Sem 1/OS/: addrbk.sh  asign9.c  p2.c  sorting1.c  thread.c  thread_arith.c
Sem 2/SL 4/: EIGRRP.pkt  ROUTER-CONFIG.pkt  SUBNET.pkt  extended-acl.pkt  sever.c  vlan.pkt
(+1020 files in other folders)
